Update to task 1

--- a/data-wrangling/tasks/task-1/rideoutm-task1.ipynb
+++ b/data-wrangling/tasks/task-1/rideoutm-task1.ipynb
@@ -132,7 +132,7 @@
     "## Graph of Test Data\n",
     "\n",
     "Below test data for a handful of ficitious individuals has been created. The features per individual are name, height, weight, traditional BMI and New BMI.\n",
-    "BMI and New BMI data is then plotted on a bar graph for the individuals."
+    "BMI and New BMI data is then plotted on a bar graph for the individuals.\n"
    ]
   },
   {
@@ -144,6 +144,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Luke    has a BMI of 18.56 which is Normal     \n",
+      "Rei     has a BMI of 22.86 which is Normal     \n",
+      "Jose    has a BMI of 29.69 which is Overweight \n",
+      "Marcela has a BMI of 22.04 which is Normal     \n",
+      "Sven    has a BMI of 24.44 which is Normal     \n",
+      "Katrina has a BMI of 32.65 which is Obese      \n",
+      "------------------------------------------\n",
       "Luke    has a BMI of 18.56 which is Normal      The new BMI index is 17.50.\n",
       "Rei     has a BMI of 22.86 which is Normal      The new BMI index is 22.46.\n",
       "Jose    has a BMI of 29.69 which is Overweight  The new BMI index is 30.51.\n",
@@ -154,22 +161,43 @@
     }
    ],
    "source": [
-    "# Test data\n",
+    "###\n",
+    "# Question 2.1 Implementation - 3 python lists of identical length\n",
+    "###\n",
     "names = ['Luke', \"Rei\", \"Jose\", \"Marcela\", \"Sven\", \"Katrina\"]\n",
     "heights = [190, 175, 160, 165, 150, 175]\n",
     "weights = [67, 70, 76, 60, 55, 100]\n",
+    "\n",
+    "###\n",
+    "# Question 2.2 Implementation - For loop to create BMI lists\n",
+    "###\n",
     "traditional_bmis = [calculate_traditional_bmi(h, w) for h, w in zip(heights, weights)]\n",
-    "new_bmis = [calculate_new_bmi(h, w) for h, w in zip(heights, weights)]\n",
     "traditional_bmi_categories = [determine_bmi_category(bmi) for bmi in traditional_bmis]\n",
     "traditional_bmi_colours = [bmi_category_to_colour[category] for category in traditional_bmi_categories]\n",
+    "\n",
+    "###\n",
+    "# Question 3.1 Implementation - Create new BMI lists\n",
+    "###\n",
+    "new_bmis = [calculate_new_bmi(h, w) for h, w in zip(heights, weights)]\n",
     "new_bmi_categories = [determine_bmi_category(bmi) for bmi in new_bmis]\n",
     "new_bmi_colours = [bmi_category_to_colour[category] for category in new_bmi_categories]\n",
+    "\n",
     "# Lengths for display alignment\n",
     "max_name_length = max(len(name) for name in names)\n",
     "max_category_length = max(len(category) for category in new_bmi_categories)\n",
     "\n",
-    "# Print the bmi calculations for each person\n",
-    "for name, height, weight, bmi, new_bmi, category, colour in zip(names, heights, weights, traditional_bmis, new_bmis, traditional_bmi_categories, traditional_bmi_colours):\n",
+    "###\n",
+    "# Question 2.3 Implementation - Printing of person, BMI and BMI category\n",
+    "###\n",
+    "for name, height, weight, bmi,  category in zip(names, heights, weights, traditional_bmis, traditional_bmi_categories):\n",
+    "    print (f\"{name:<{max_name_length}} has a BMI of {bmi:.2f} which is {category:<{max_category_length}}\")\n",
+    "\n",
+    "print('------------------------------------------')\n",
+    "\n",
+    "###\n",
+    "# Question 3.2 Implementation - Modified printing of person, BMI, new BMI and BMI category\n",
+    "###\n",
+    "for name, height, weight, bmi, new_bmi, category in zip(names, heights, weights, traditional_bmis, new_bmis, traditional_bmi_categories):\n",
     "    print (f\"{name:<{max_name_length}} has a BMI of {bmi:.2f} which is {category:<{max_category_length}} The new BMI index is {new_bmi:.2f}.\")"
    ]
   },
@@ -204,7 +232,9 @@
     }
    ],
    "source": [
-    "# Plot of bar graph for BMI and New BMI\n",
+    "###\n",
+    "# Question 2.4 Implementation - Bar plot of BMI\n",
+    "###\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "fix, ax = plt.subplots(figsize=(10, 6))\n",
@@ -256,7 +286,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## BMI Measure Commentary\n",
+    "## BMI Measure Commentary (Question 3.3 Response)\n",
     "\n",
     "Traditional BMI is a simple measure that given the height and weight of a person, it can catagorise their weight into weight bands that allows the populace, and medical professionals, to easily understand if their weight is at a healthy level or not for their height. Since its creation in 1832 by Adolphe Jacques Quetelet [1] it has been a useful tool for determining if individuals are leading a sedentary life and if they are overweight [4]. One of the biggest advantages of the BMI measure has been to show a correlation between an individual's BMI and various health outcomes. Some examples of such correlations include:\n",
     "* An individual with a BMI greater than 30.0 has a marked increase in the risk of chronic health issues such as heart disease, cancer and all-cause mortality [6].\n",
