ml - task 2 reworked

--- a/machine-learning/tasks/task2/task2.ipynb
+++ b/machine-learning/tasks/task2/task2.ipynb
@@ -30,36 +30,33 @@
    "source": [
     "#########\n",
     "# Task 1\n",
+    "#\n",
+    "# Create, print and validate sensor data for Sensor_IDs, Temperature_Readings and Humidity_Levels\n",
     "#########\n",
+    "\n",
+    "#\n",
+    "# Generate a hashed, unique and random sensor id string\n",
+    "#\n",
     "def generate_sensor_id():\n",
-    "    \"\"\"\n",
-    "      Generate a hashed, unique and random sensor id string\n",
-    "    \"\"\"\n",
     "    id_to_hash = f\"Sensor_id_{random.random()}\"\n",
-    "    id_hashed = hashlib.sha256(id_to_hash.encode())\n",
+    "    id_hashed = hashlib.sha256(id_to_hash.encode()) # used hashlib sha256 to generate a unique hash\n",
     "    return id_hashed.hexdigest()\n",
     "\n",
+    "# Check that a sensor id is not already in the list of all sensor ids\n",
     "def sensor_id_valid(sensor_id, all_sensor_ids):\n",
-    "    \"\"\"\n",
-    "      A sensor id is valid if it is unique in all sensor ids (ie its can only be counted once)\n",
-    "    \"\"\"\n",
     "    if all_sensor_ids.count(sensor_id) == 1:\n",
     "        return True\n",
     "    else:\n",
     "        return False\n",
     "\n",
+    "# Validate the temperature reading is between -10 and 50\n",
     "def temperature_reading_valid(temperature_reading):\n",
-    "    \"\"\"\n",
-    "      Validate the temperature reading is between -10 and 50\n",
-    "    \"\"\"\n",
     "    if temperature_reading >= -10 and temperature_reading <= 50:\n",
     "        return True\n",
     "    return False\n",
     "\n",
+    "# Validate that the humidity level is between 10% and 100%\n",
     "def humidity_level_valid(humidity_level):\n",
-    "    \"\"\"\n",
-    "      Validate that the humidity level is between 10% and 100%\n",
-    "    \"\"\"\n",
     "    if humidity_level >= 10 and humidity_level <= 100:\n",
     "        return True\n",
     "    return False\n",
@@ -73,7 +70,7 @@
     "# Generate 5 random sensor ids, temperature readings and humidity levels\n",
     "for i in range(5):\n",
     "    Sensor_IDs.append(generate_sensor_id())\n",
-    "    Temperature_Readings.append(random.randint(-10, 50))\n",
+    "    Temperature_Readings.append(random.randint(-10, 50)) # use standard random library to generate random numbers\n",
     "    Humidity_Levels.append(random.randint(10, 100))\n",
     "\n",
     "# Validate and print all data\n",
@@ -106,13 +103,14 @@
    "source": [
     "#########\n",
     "# Task 2\n",
+    "#\n",
+    "# Create a dictionary from sensor data.\n",
     "#########\n",
     "\n",
     "\n",
+    "# Returns a dictionary of sensor data with sensor_id as the key and temperature and humidity as the values. \n",
+    "# Throws exception if data is any data points are invalid\n",
     "def create_sensor_data_dict(sensor_ids, temperature_readings, humidity_levels):\n",
-    "    \"\"\"\n",
-    "      Create a dictionary from sensor data. Throws exception if data is any data points are invalid\n",
-    "    \"\"\"\n",
     "    sensor_data = {}\n",
     "    for sensor_id, temp, humidity in zip(sensor_ids, temperature_readings, humidity_levels):\n",
     "        if sensor_id and temperature_reading_valid(temp) and humidity_level_valid(humidity):\n",
@@ -124,10 +122,9 @@
     "            raise Exception(\"Invalid sensor data: sensor_id, temperature_reading, or humidity_level is invalid.\")\n",
     "    return sensor_data\n",
     "\n",
+    "\n",
+    "# Filter and sort sensors by temperature. Prints top 3 readings\n",
     "def filter_and_sort_sensors(sensor_data, temp_threshold):\n",
-    "    \"\"\"\n",
-    "      Filters data exceeding temp_threshold, sorts by temperature descending and prints top three readings\n",
-    "    \"\"\"\n",
     "    filtered_sensors = {k: v for k, v in sensor_data.items() if v['Temperature_Reading'] > temp_threshold}\n",
     "    sorted_sensors = dict(sorted(filtered_sensors.items(), key=lambda item: item[1]['Temperature_Reading'], reverse=True))\n",
     "    \n",
@@ -135,7 +132,7 @@
     "    for sensor_id, data in top_3:\n",
     "        print(f\"Sensor_ID: {sensor_id}, Temperature: {data['Temperature_Reading']}, Humidity: {data['Humidity_Level']}\")\n",
     "\n",
-    "\n",
+    "# Execute the above functions\n",
     "print(\"Sensor data where temperature is greater than 0\")\n",
     "sensor_dict = create_sensor_data_dict(Sensor_IDs, Temperature_Readings, Humidity_Levels)\n",
     "filter_and_sort_sensors(sensor_dict, 0)\n",
@@ -150,15 +147,20 @@
    "source": [
     "#########\n",
     "# Task 3\n",
+    "#\n",
+    "# Simulate air quality readings and recommend activities based on air quality\n",
     "#########\n",
     "\n",
-    "air_quality = None\n",
+    "# Define air quality categories\n",
     "GOOD = 'Good'\n",
     "MODERATE = 'Moderate'   \n",
     "UNHEALTHY = 'Unhealthy'\n",
     "HAZARDOUS = 'Hazardous'\n",
     "air_quality_categories = [GOOD, MODERATE, UNHEALTHY, HAZARDOUS]\n",
     "\n",
+    "air_quality = None\n",
+    "\n",
+    "# Recommend activities based on air quality. Returns a random activity from the list of activities for the given air quality\n",
     "def recommend_activity(air_quality):\n",
     "    activities = {\n",
     "        GOOD: ['hiking', 'biking', 'swimming'],\n",
@@ -168,6 +170,7 @@
     "    }\n",
     "    return random.choice(activities.get(air_quality, [\"Invalid air quality\"]))\n",
     "\n",
+    "# Get air quality from user. Returns the air quality if it is valid, otherwise prompts user to enter a valid air quality\n",
     "def get_air_quality():\n",
     "    while True:\n",
     "        air_quality = input(\"Enter air quality (Good, Moderate, Unhealthy, Hazardous): \")\n",
@@ -176,17 +179,20 @@
     "        else:\n",
     "            print(\"Invalid input. Please enter a valid air quality.\")\n",
     "\n",
+    "# Simulate air quality readings. Returns a tuple of counts and percentages of air quality readings\n",
     "def simulate_air_quality_readings():\n",
     "    readings = [random.choice(air_quality_categories) for _ in range(10)]\n",
     "    counts = {category: readings.count(category) for category in air_quality_categories}\n",
     "    percentages = {category: (count / len(readings)) * 100 for category, count in counts.items()}\n",
     "    return counts, percentages\n",
     "\n",
+    "# Pretty prints results\n",
     "def print_results(counts, percentages):\n",
     "    results = [[category, counts[category], f\"{percentages[category]:.2f}%\"] for category in air_quality_categories]\n",
     "    print(tabulate(results, headers=['Air Quality', 'Count', 'Percentage'], tablefmt='orgtbl'))\n",
     "\n",
     "\n",
+    "# Execute the above functions\n",
     "print(\"\\nSimulated Air Quality Readings:\")\n",
     "counts, percentages = simulate_air_quality_readings()\n",
     "print_results(counts, percentages)\n",
@@ -207,25 +213,32 @@
    "source": [
     "#########\n",
     "# Task 4\n",
+    "#\n",
+    "# Log even and odd numbers to a file\n",
     "#########\n",
     "\n",
+    "# Create list to hold even and odd numbers\n",
     "even_numbers = []\n",
     "odd_numbers = []\n",
     "seen_numbers = set()\n",
     "\n",
+    "# Loop until a negative number is entered\n",
     "while True:\n",
     "    try:\n",
     "        num = int(input(\"Enter a number (negative number to stop): \"))\n",
     "        \n",
+    "        # negative number to stop\n",
     "        if num < 0:\n",
     "            break\n",
-    "        \n",
+    "\n",
+    "        # dont allow duplicates\n",
     "        if num in seen_numbers:\n",
     "            print(\"You've already entered this number. Try a different one.\")\n",
     "            continue\n",
     "        \n",
-    "        seen_numbers.add(num)\n",
+    "        seen_numbers.add(num) # add to list to check for duplicates\n",
     "        \n",
+    "        # add to even or odd list\n",
     "        if num % 2 == 0:\n",
     "            even_numbers.append(num)\n",
     "        else:\n",
@@ -234,6 +247,7 @@
     "    except ValueError:\n",
     "        print(\"Invalid input. Please enter a valid number.\")\n",
     "\n",
+    "# Write the two lists to a file\n",
     "with open(\"loop_log.txt\", \"w\") as file:\n",
     "    file.write(f\"Even numbers: {even_numbers}\\n\")\n",
     "    file.write(f\"Odd numbers: {odd_numbers}\\n\")\n",
@@ -249,23 +263,27 @@
    "source": [
     "#########\n",
     "# Task 5\n",
+    "#\n",
+    "# Print the characters at even and odd positions in a string\n",
     "#########\n",
     "\n",
+    "# Print the even and odd characters in a string as two separate lists\n",
     "def print_character_positions(term):\n",
     "    even_positions = \"\"\n",
     "    odd_positions = \"\"\n",
     "    for i in range(len(term)):\n",
-    "        if i % 2 == 0:\n",
+    "        if i % 2 == 0: # even position\n",
     "            even_positions += term[i]\n",
     "            odd_positions += \" \"\n",
-    "        else:\n",
+    "        else: # odd position\n",
     "            odd_positions += term[i]\n",
     "            even_positions += \" \"\n",
+    "    # print the two lists\n",
     "    print(\"Characters at even positions: \", even_positions)\n",
     "    print(\"Characters at  odd positions: \", odd_positions)\n",
     "\n",
-    "term = input(\"Enter a scientific term: \")\n",
-    "print_character_positions(term)\n",
+    "term = input(\"Enter a scientific term: \") # get a term from the user\n",
+    "print_character_positions(term) # run function\n",
     "\n"
    ]
   },
@@ -277,11 +295,13 @@
    "source": [
     "#########\n",
     "# Task 6\n",
+    "#\n",
+    "# Manipulate the wind speed data\n",
     "#########\n",
     "\n",
     "WIND_SPEED_COLUMN = 'Wind_Speed_kmh'\n",
     "\n",
-    "weather_data = pd.read_csv('WeatherData.csv')\n",
+    "weather_data = pd.read_csv('WeatherData.csv') # read the weather data\n",
     "\n",
     "# There is a superfluous unnamed column, so we drop it\n",
     "weather_data.drop(columns=['Unnamed: 6'], inplace=True)\n",
@@ -312,6 +332,8 @@
    "source": [
     "#########\n",
     "# Task 7\n",
+    "#\n",
+    "# Impute missing values using median and mode imputation\n",
     "#########\n",
     "\n",
     "\n",
@@ -320,6 +342,7 @@
     "# There is a superfluous unnamed column, so we drop it\n",
     "weather_data.drop(columns=['Unnamed: 6'], inplace=True)\n",
     "\n",
+    "# Print dataset information\n",
     "print(\"Dataset Information:\")\n",
     "print(weather_data.info())\n",
     "\n",
@@ -408,19 +431,21 @@
    "source": [
     "#########\n",
     "# Task 8\n",
+    "#\n",
+    "# Perform one-hot encoding on the Weather_Condition column\n",
     "#########\n",
     "\n",
-    "# Perform one-hot encoding on the Weather_Condition column\n",
-    "encoded_weather = pd.get_dummies(weather_data['Weather_Condition'], prefix='Weather')\n",
+    "encoded_weather = pd.get_dummies(weather_data['Weather_Condition'], prefix='Weather') # encode the weather condition column into a one-hot encoded dataframe\n",
     "print(\"\\nEncoded weather conditions:\")\n",
     "print(encoded_weather.head())\n",
     "\n",
-    "weather_data_encoded = weather_data.copy()\n",
-    "weather_data_encoded = pd.concat([weather_data_encoded, encoded_weather], axis=1)\n",
+    "weather_data_encoded = weather_data.copy() # make a copy of the weather data\n",
+    "weather_data_encoded = pd.concat([weather_data_encoded, encoded_weather], axis=1) # concatenate the one-hot encoded dataframe to the weather data\n",
     "\n",
     "# Drop the original Weather_Condition column\n",
     "weather_data_encoded = weather_data_encoded.drop('Weather_Condition', axis=1)\n",
     "\n",
+    "# Print the first few rows of the encoded weather data\n",
     "print(\"\\nDataset with encoded weather conditions:\")\n",
     "print(weather_data_encoded.head())\n",
     "\n",
@@ -428,7 +453,7 @@
     "print(\"1. Weather condition (Sunny, Rainy, Cloudy, Stormy) is categorical and has no natural ordering so one-hot encoding allows each weather condition to have an independent effect on the model.\")\n",
     "print(\"2. As there are only 4 categories, the dimensionality increase is manageable\")\n",
     "\n",
-    "weather_data_encoded.to_csv('WeatherData_Encoded.csv', index=False)\n",
+    "weather_data_encoded.to_csv('WeatherData_Encoded.csv', index=False) # save the encoded weather data to a csv file\n",
     "\n",
     "\n",
     "\n"
@@ -442,12 +467,14 @@
    "source": [
     "#########\n",
     "# Task 9\n",
+    "#\n",
+    "# Min-Max scaling\n",
     "#########\n",
     "\n",
-    "weather_data_scaled = weather_data_encoded.copy()\n",
-    "numerical_cols = ['Temperature_C', 'Humidity_%', 'Wind_Speed_kmh', 'Precipitation_mm']\n",
+    "weather_data_scaled = weather_data_encoded.copy() \n",
+    "numerical_cols = ['Temperature_C', 'Humidity_%', 'Wind_Speed_kmh', 'Precipitation_mm'] # the numerical columns to scale\n",
     "\n",
-    "scaler = MinMaxScaler()\n",
+    "scaler = MinMaxScaler() # create a min-max scaler\n",
     "\n",
     "# Apply Min-Max scaling to the numerical columns\n",
     "weather_data_scaled[numerical_cols] = scaler.fit_transform(weather_data_scaled[numerical_cols])\n",
@@ -457,25 +484,27 @@
     "\n",
     "plt.figure(figsize=(15, 12))\n",
     "\n",
-    "# Histogram of temperatures before and after scaling\n",
+    "# Histogram of temperatures before scaling\n",
     "plt.subplot(2, 2, 1)\n",
     "plt.hist(weather_data_encoded['Temperature_C'], bins=15, alpha=0.7, color='blue')\n",
     "plt.title('Temperature Distribution Before Scaling')\n",
     "plt.xlabel('Temperature (°C)')\n",
     "plt.ylabel('Frequency')\n",
     "\n",
+    "# Histogram of temperatures after scaling\n",
     "plt.subplot(2, 2, 2)\n",
     "plt.hist(weather_data_scaled['Temperature_C'], bins=15, alpha=0.7, color='green')\n",
     "plt.title('Temperature Distribution After Min-Max Scaling')\n",
     "plt.xlabel('Scaled Temperature (0-1)')\n",
     "plt.ylabel('Frequency')\n",
     "\n",
-    "# Boxplot of wind speed before and after scaling\n",
+    "# Boxplot of wind speed before scaling\n",
     "plt.subplot(2, 2, 3)\n",
     "plt.boxplot(weather_data_encoded['Wind_Speed_kmh'])\n",
     "plt.title('Wind Speed Distribution Before Scaling')\n",
     "plt.ylabel('Wind Speed (km/h)')\n",
     "\n",
+    "# Boxplot of wind speed after scaling\n",
     "plt.subplot(2, 2, 4)\n",
     "plt.boxplot(weather_data_scaled['Wind_Speed_kmh'])\n",
     "plt.title('Wind Speed Distribution After Min-Max Scaling')\n",
@@ -484,7 +513,7 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "# Analysis\n",
+    "# Print the analysis of min-max scaling effects\n",
     "print(\"\\nAnalysis of Min-Max Scaling Effects:\")\n",
     "print(\"1. Range Transformation: All numerical features now have the same range, making them comparable. That is, the minimum value is 0 and the maximum value is 1.\")\n",
     "print(\"2. Distribution Preservation: There is no change to the shape of the distribution.\")\n",
