ml - task 4 draft

--- a/machine-learning/tasks/task4/task4.ipynb
+++ b/machine-learning/tasks/task4/task4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,9 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n"
+    "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
+    "from sklearn.cluster import KMeans\n",
+    "\n"
    ]
   },
   {
@@ -137,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Subtask 4: Visualize feature distributions with histograms and KDE plots to understand the overall distribution of each feature.\n",
+    "### Subtask 4: Visualise feature distributions with histograms and KDE plots to understand the overall distribution of each feature.\n",
     "\n",
     "Seaborn has differing functions for histograms and KDE plots. Use these."
    ]
@@ -255,12 +257,153 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Apply Min-Max normalization to scale features to [0,1] range\n",
+    "\n",
+    "numerical_columns = df.select_dtypes(include=[np.number]).columns.tolist() # create list of numerical columns\n",
     "scaler = MinMaxScaler()\n",
+    "df[numerical_columns] = scaler.fit_transform(df[numerical_columns]) # fit then transform the numerical columns\n",
     "\n",
-    "df[numerical_columns] = scaler.fit_transform(df[numerical_columns])\n",
+    "df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Task 2 - Impact of the Number of Clusters on KMeans Clustering with Euclidean Distance\n",
     "\n",
-    "print(\"Data has been normalized to the range [0,1]\")\n"
+    "The subtask for this are:\n",
+    "1. Apply KMeans clustering (using Euclidean distance) on the standardized dataset.\n",
+    "2. For a range of cluster numbers (e.g., from 1 to 10), compute the inertia (SSE) and plot\n",
+    "these values to identify the “elbow” point."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "inertia_values = []\n",
+    "cluster_range = range(1, 11) \n",
+    "\n",
+    "# Try kmeans on 1 to 10 clusters and store the inertia values for each\n",
+    "for k in cluster_range:\n",
+    "    kmeans_model = KMeans(n_clusters=k, random_state=42)\n",
+    "    kmeans_model.fit(df[numerical_columns])\n",
+    "    inertia_values.append(kmeans_model.inertia_)\n",
+    "\n",
+    "# plot the results\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.plot(cluster_range, inertia_values, 'bo-')\n",
+    "plt.xlabel('Cluster Count)\n",
+    "plt.ylabel('Inertia')\n",
+    "plt.title('Kmeans Inertia for different cluster counts')\n",
+    "plt.grid(True)\n",
+    "plt.xticks(cluster_range)\n",
+    "plt.show()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the above plot, the elbow appears to be when the cluster number is 5 as after that point the inertia decreases at a slower rate than for lower cluster numbers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Task 3 - Evaluating the Stability of KMeans and KMeans++ Initialization\n",
+    "\n",
+    "Subtasks are:\n",
+    "1. Run KMeans clustering 50 times using two initialization methods:\n",
+    "    - Standard random initialization.\n",
+    "    - KMeans++ initialization.\n",
+    "2. Compute and compare the average inertia (SSE) and the Silhouette Score for each\n",
+    "method over these iterations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import silhouette_score\n",
+    "import numpy as np\n",
+    "\n",
+    "# Set parameters\n",
+    "n_iterations = 50\n",
+    "n_clusters = 5  # Using 5 clusters based on the elbow method from previous task\n",
+    "random_inertias = []\n",
+    "random_silhouette_scores = []\n",
+    "kmeans_plus_inertias = []\n",
+    "kmeans_plus_silhouette_scores = []\n",
+    "\n",
+    "# Run standard random initialisation 50 times\n",
+    "for i in range(n_iterations):\n",
+    "    # Standard random initialisation\n",
+    "    kmeans_random = KMeans(n_clusters=n_clusters, init='random', random_state=i)\n",
+    "    kmeans_random.fit(df[numerical_columns])\n",
+    "    random_inertias.append(kmeans_random.inertia_)\n",
+    "    \n",
+    "    # Calculate silhouette score for random init\n",
+    "    labels_random = kmeans_random.labels_\n",
+    "    random_silhouette_scores.append(silhouette_score(df[numerical_columns], labels_random))\n",
+    "    \n",
+    "    # KMeans++ initialisation\n",
+    "    kmeans_plus = KMeans(n_clusters=n_clusters, init='k-means++', random_state=i)\n",
+    "    kmeans_plus.fit(df[numerical_columns])\n",
+    "    kmeans_plus_inertias.append(kmeans_plus.inertia_)\n",
+    "    \n",
+    "    # Calculate silhouette score for kmeans++\n",
+    "    labels_plus = kmeans_plus.labels_\n",
+    "    kmeans_plus_silhouette_scores.append(silhouette_score(df[numerical_columns], labels_plus))\n",
+    "\n",
+    "# Calculate average metrics\n",
+    "avg_random_inertia = np.mean(random_inertias)\n",
+    "avg_random_silhouette = np.mean(random_silhouette_scores)\n",
+    "avg_kmeans_plus_inertia = np.mean(kmeans_plus_inertias)\n",
+    "avg_kmeans_plus_silhouette = np.mean(kmeans_plus_silhouette_scores)\n",
+    "\n",
+    "# Calculate standard deviations to assess stability\n",
+    "std_random_inertia = np.std(random_inertias)\n",
+    "std_random_silhouette = np.std(random_silhouette_scores)\n",
+    "std_kmeans_plus_inertia = np.std(kmeans_plus_inertias)\n",
+    "std_kmeans_plus_silhouette = np.std(kmeans_plus_silhouette_scores)\n",
+    "\n",
+    "# Display results\n",
+    "print(\"Standard Random Initialisation:\")\n",
+    "print(f\"Average Inertia: {avg_random_inertia:.2f} (±{std_random_inertia:.2f})\")\n",
+    "print(f\"Average Silhouette Score: {avg_random_silhouette:.4f} (±{std_random_silhouette:.4f})\")\n",
+    "print(\"\\nKMeans++ Initialisation:\")\n",
+    "print(f\"Average Inertia: {avg_kmeans_plus_inertia:.2f} (±{std_kmeans_plus_inertia:.2f})\")\n",
+    "print(f\"Average Silhouette Score: {avg_kmeans_plus_silhouette:.4f} (±{std_kmeans_plus_silhouette:.4f})\")\n",
+    "\n",
+    "# Plot the distribution of inertias for both methods\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "\n",
+    "plt.subplot(1, 2, 1)\n",
+    "plt.hist(random_inertias, alpha=0.7, label='Random Init')\n",
+    "plt.hist(kmeans_plus_inertias, alpha=0.7, label='KMeans++ Init')\n",
+    "plt.xlabel('Inertia')\n",
+    "plt.ylabel('Frequency')\n",
+    "plt.title('Distribution of Inertia Values')\n",
+    "plt.legend()\n",
+    "\n",
+    "plt.subplot(1, 2, 2)\n",
+    "plt.hist(random_silhouette_scores, alpha=0.7, label='Random Init')\n",
+    "plt.hist(kmeans_plus_silhouette_scores, alpha=0.7, label='KMeans++ Init')\n",
+    "plt.xlabel('Silhouette Score')\n",
+    "plt.ylabel('Frequency')\n",
+    "plt.title('Distribution of Silhouette Scores')\n",
+    "plt.legend()\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
    ]
   }
  ],
